--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CameraCAPTCHA">
+        android:theme="@style/Theme.CameraCAPTCHA"
+        android:configChanges="orientation"
+        android:screenOrientation="portrait">
 
         <provider
             android:name="androidx.core.content.FileProvider"
