--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,9 @@ android {
 
 dependencies {
 
+    implementation 'com.microsoft.azure.cognitiveservices:azure-cognitiveservices-visualsearch:1.0.2-beta'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.6.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
