--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 dependencies {
 
     implementation 'com.microsoft.azure.cognitiveservices:azure-cognitiveservices-visualsearch:1.0.2-beta'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.1")
